--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview --port 4173",
-    "test": "vitest run",
-    "test:ui": "vitest",
-    "e2e": "playwright test"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview --port 4173",
+  "test": "vitest run",
+  "test:ui": "vitest",
+  "e2e": "playwright test"
+},
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
