--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,6 +141,18 @@ jobs:
           java-version: "21"
           cache: maven
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      # Étape cruciale : On installe les dépendances manuellement avant l'action Cypress
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
+
       - name: Start Backend (Background)
         working-directory: backend
         run: |
@@ -150,9 +162,10 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: frontend
+          # On indique à l'action de NE PAS réinstaller (car on l'a fait avec npm ci)
+          install: false 
           build: npm run build
           start: npm run preview -- --host 127.0.0.1 --port 5173
-          # On attend que le back et le front soient prêts avant de lancer Cypress
           wait-on: 'http://127.0.0.1:8080/actuator/health, http://127.0.0.1:5173'
           wait-on-timeout: 120
           browser: chrome
