--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "playwright": "^1.57.0",
     "typescript": "^5.9.3",
     "vite": "^5.4.21",
-    "vitest": "^2.1.9"
+    "vitest": "^2.1.9",
+    "cypress": "^15.9.0"
   }
 }
