--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,6 +167,7 @@ jobs:
           start: npm run preview --prefix frontend -- --host 127.0.0.1 --port 5173
           wait-on: 'http://127.0.0.1:8080/actuator/health, http://127.0.0.1:5173'
           wait-on-timeout: 120
+          project-root: .
           browser: chrome
           # On force le chemin du fichier de config s'il n'est pas trouvé
           config-file: cypress.config.js 
